--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,4 +1,11 @@
 /* pages/search/search.wxss */
+.content{
+  overflow: hidden;
+}
+.head{
+  overflow: hidden;
+  margin: 20rpx 20rpx 30rpx 30rpx;
+}
 .search-bar{
   width: 580rpx;
   background-color: #eeeeee;
@@ -6,7 +13,6 @@
   padding: 10rpx 10rpx 14rpx 10rpx;
   border-radius: 60rpx;
   float: left;
-  margin: 10rpx 20rpx 30rpx 30rpx;
 }
 .search-icon{
   width: 30rpx;
@@ -20,7 +26,110 @@
   float: left;
 }
 .cancle{
+  font-size: 32rpx;
+  line-height: 82rpx;
+  float: left;
+  margin-left: 20rpx;
+}
+.results{
+  width: 690rpx;
+  margin-left: 30rpx;
+}
+.result{
+  margin-top: 20rpx;
+  overflow: hidden;
+}
+.mudidiicon{
+  width: 60rpx;
+  height: 60rpx;
+  float: left;
+}
+.resultinfo{
+  float: left;
+  margin-left: 20rpx;
+  padding-bottom: 20rpx;
+  width: 610rpx;
+  border-bottom: 1px solid #eaeaea;
+}
+.resultName{
+  font-size: 32rpx;
+}
+.resultType{
+  font-size: 28rpx;
+  color: #717476;
+}
+.bottom{
+  margin-top: 20rpx;
+  font-size: 32rpx;
+  margin-left: 30rpx;
+}
+.top{
+  overflow: hidden;
+}
+.title{
   font-size: 30rpx;
   float: left;
-  margin-top: 24rpx;
+  line-height: 40rpx;
+}
+.clear{
+  width: 40rpx;
+  height: 40rpx;
+  float: right;
+}
+.histories{
+  overflow: hidden;
+}
+.history{
+  float: left;
+  font-size: 30rpx;
+  background-color: #eaeaea;
+  padding: 10rpx 15rpx;
+  margin-right: 15rpx;
+  margin-top: 15rpx;
+  border-radius: 10rpx;
+}
+
+.place{
+  position: relative;
+  width: 660rpx;
+  overflow: hidden;
+  margin-left: 30rpx;
+  box-shadow: 0 0 2rpx #000;
+  padding: 10rpx 15rpx;
+  margin-bottom: 10rpx;
+  border-radius: 5rpx;
+}
+.img{
+  width: 180rpx;
+  height: 120rpx;
+  float: left;
+  border-radius: 8rpx;
+  overflow: hidden;
+}
+.chName{
+  font-size: 40rpx;
+  color: orange;
+  font-weight: 600;
+  width: 400rpx;
+  float: left;
+  line-height: 70rpx;
+  margin-left: 20rpx
+}
+.text{
+  font-size: 28rpx;
+  float: left;
+  width: 400rpx;
+  margin-left: 20rpx;
+}
+.arrow{
+  position: absolute;
+  width: 40rpx;
+  height: 40rpx;
+  bottom: 50rpx;
+  right: 30rpx;
+}
+.nothing{
+  width: 550rpx;
+  margin-left: 100rpx;
+  margin-top: 20rpx;
 }
